--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
   --right-bg-color: rgba(43, 43, 43, 0.8);
   --left-btn-hover-color: rgba(87, 84, 236, 1);
   --right-button-hover-color: rgba(28, 122, 28, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
+  --speed: 1000ms;
 }
 
 * {
@@ -30,7 +33,6 @@ body {
   left: 50%;
   transform: translateX(-50%);
   top: 40%;
-  margin: 10px;
   text-decoration: none;
   color: white;
   border: white solid 0.2rem;
@@ -50,6 +52,10 @@ body {
 .split.right .btn:hover {
   background-color: var(--right-button-hover-color);
   border-color: var(--right-button-hover-color);
+}
+
+.btn:focus {
+  outline: none;
 }
 
 h1 {
@@ -97,4 +103,38 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: var(--right-bg-color);
+}
+
+.hover-left .left {
+  width: var(--hover-width);
+}
+
+.hover-left .right {
+  width: var(--other-width);
+}
+
+.hover-right .left {
+  width: var(--other-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.split.left,
+.split.right,
+.split.left::before,
+.split.right::before {
+  transition: all var(--speed) ease-in-out;
+}
+
+@media (max-width: 850px) {
+  h1 {
+    font-size: 2rem;
+    top: 30%;
+  }
+  .btn {
+    padding: 1.2rem;
+    width: 12rem;
+  }
 }
